--- a/trunk/demo_config/Makefile
+++ b/trunk/demo_config/Makefile
@@ -1,9 +1,14 @@
 
-TARGET  := demo_prefs
+TARGET  := demo_config
 
-OBJS    := demo_prefs.o
+OBJS    := demo_config.o
 
 CFLAGS = -g -O2 -Wall
+ARCH    := $(shell sh ../print_arch)
+LIBC    := $(shell sh ../print_libc)
+ifeq ($(ARCH), alpha)
+CFLAGS  += -mcpu=ev4 -Wa,-mall
+endif
 CFLAGS += $(shell gtk-config --cflags) $(shell libglade-config --cflags)
 CFLAGS += $(shell xml-config --cflags)
 LFLAGS += -Wl,-Bstatic
@@ -16,8 +21,15 @@ LFLAGS += -lxml -lz
 LFLAGS += -Wl,-Bdynamic
 LFLAGS += -L/usr/X11R6/lib -lXi -lXext -lX11 -lm -ldl
 
+INSTALL := ../../../bin/$(ARCH)/$(LIBC)/$(TARGET)
+
 $(TARGET): $(OBJS)
 	$(CC) -o $@ $^ $(LFLAGS)
+
+install: $(TARGET)
+	@echo "$(TARGET) -> $(INSTALL)"
+	@cp -p $(TARGET) $(INSTALL)
+	@strip $(INSTALL)
 
 clean:
 	rm -f *.o *.bak core $(TARGET)
